--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,15 +1,15 @@
 #title {
-    width: 255px;
+    width: 250px;
     background-color: #CB712B;
     color: white;
-    padding: 20px;
+    padding: 10px;
     margin: 15px;
 }
 
 #directions {
     background-color: #FBE6CB;
     color: #008020;
-    height: 450px;
+    height: 350px;
     width: 375px;
     font-size: 16px;
     padding: 10px;
@@ -19,28 +19,32 @@
 #random-number {
     background-color: #5BC87D;
     width: 200px;
-    height: 200px;
+    height: 120px;
     color: #4D2A67;
     margin: 20px;
+    font-size: 40px;
 }
 
 aside {
     background-color: #4AFDFE;
-    height: 180px;
+    height: 100px;
     width: 90px;
     position: static;
     margin-left: 240px;
-    margin-top: -220px;
+    margin-top: -140px;
     padding-top: 20px;
     padding-left: 10px;
     
 }
 #pictures{
-    background-color: white;
+    
+
     margin: 20px;
     width: 480px;
+
 }
 img {
+    background-color: white;
     padding: 20px;
     height: 75px;
     width: 75px;
@@ -49,15 +53,17 @@ img {
 #youtotal {
     background-color: #2CA194;
     color: white;
-    width: 300px;
+    width: 230px;
     margin: 20px;
     height: 25px;
+
 }
 
 #score {
     background-color: #2CA194;
     color: white;
     height: 150px;
-    width: 300px;
+    width: 230px;
     margin: 20px;  
+    font-size: 36px;
 }
