--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,39 +1,119 @@
-#title {
-    width: 250px;
-    background-color: #CB712B;
-    color: white;
-    padding: 10px;
-    margin: 15px;
+body{
+    background-color: rgb(22,17,13); 
 }
 
-#directions {
-    background-color: #FBE6CB;
-    color: #008020;
-    height: 350px;
-    width: 375px;
-    font-size: 16px;
-    padding: 10px;
-    margin: 15px;
+.jumbotron{
+margin-bottom: 0px;
+background-image: url('lake.jpg');
+background-position: 20% 100%;
+background-size: cover;
+background-repeat: no-repeat;
+height: 400px;
+overflow: auto; 
+margin: -70px; 
 }
+
+section {
+    position: absolute;
+}
+
+.text {
+
+    overflow: visible;
+    margin: auto; 
+    width: 800px; 
+    text-align: center;
+}
+
+.top:before {
+    padding: -50px; 
+    content:'Crystals Collector';
+    color: rgb(235,235,245);
+    font-weight:bold;
+    display:block;
+    text-transform: uppercase;
+    font-size:50px;
+    margin-top: 30px;
+    line-height:120px;
+    height: 70px;
+    overflow: hidden;
+    margin: 0;
+    padding-left: 60px;
+    width: 100%;
+    text-shadow:1px 1px 0px rgb(185,185,195),2px 2px 0px rgb(185,185,195),3px 3px 0px rgb(185,185,195);
+}
+
+.bottom {
+    position:relative;
+    top:-50px;
+    }
+
+#title {
+        color: rgba(245,245,245,.2);
+        font-weight:bold;
+        text-transform: uppercase;
+        line-height:90px;
+        font-size:50px;
+        height: 70px;
+        overflow: hidden;
+        margin-top: 0px;
+        padding-left: 63px;
+        width: 100%;
+        text-shadow: 5px 0px 20px rgba(255,255,255,.2),-5px 0px 10px rgba(255,255,255,.4);
+		 -webkit-perspective: 80px;
+       -moz-perspective: 80px;
+        perspective: 80px;
+        -webkit-perspective-origin: 50% 100%;
+        -moz-perspective-origin: 50% 100%;
+        perspective-origin: 50% 100%;
+    }
+
+span[class^="char"] {
+        display:inline-block;
+        position: relative;
+        -webkit-transform: rotateX(10deg) rotateY(0deg) rotateZ(0deg);
+        -moz-transform: rotateX(10deg) rotateY(0deg) rotateZ(0deg);
+        -o-transform: rotateX(10deg) rotateY(0deg) rotateZ(0deg);
+        -ms-transform: rotateX(10deg) rotateY(0deg) rotateZ(0deg);
+        transform: rotateX(10deg) rotateY(0deg) rotateZ(0deg);
+    }
+
+button {
+        background-color: lightblue; 
+    }
+
+.custom-card-header {
+        color: white; 
+        background: blue;  
+        border-radius: 50px;
+        margin: 10px; 
+         
+        }
 
 #random-number {
-    background-color: #5BC87D;
+    background-color: blue;
+    color: white; 
     width: 200px;
     height: 120px;
-    color: #4D2A67;
     margin: 20px;
     font-size: 40px;
+    padding: 30px; 
+    border-radius: 50%;
+   
 }
 
 aside {
-    background-color: #4AFDFE;
+    background-color: blue;
+    color: white; 
     height: 100px;
-    width: 90px;
+    width: 200px;
     position: static;
     margin-left: 240px;
     margin-top: -140px;
     padding-top: 20px;
     padding-left: 10px;
+    text-transform: uppercase;
+    
     
 }
 #pictures{
@@ -44,26 +124,52 @@ aside {
 
 }
 img {
-    background-color: white;
+  
     padding: 20px;
-    height: 75px;
-    width: 75px;
+    height: 100px;
+    width: 100px;
 }
 
 #youtotal {
-    background-color: #2CA194;
+    background-color: blue;
     color: white;
     width: 230px;
-    margin: 20px;
-    height: 25px;
+    position: relative;
+    height: 100px;
+    text-transform: uppercase;
+    margin-left: 100px; 
+    
+
+    
 
 }
 
 #score {
-    background-color: #2CA194;
+    background-color: blue;
     color: white;
-    height: 150px;
-    width: 230px;
-    margin: 20px;  
+    height: 75px;
+    width: 100px;
     font-size: 36px;
+    border-radius: 50%;
+    float: right; 
+   
+    
+}
+
+.gradiant {
+    border:4px solid blue;
+    text-shadow: -1px -1px 2px rgba(0,0,0,0.6);
+    box-shadow: -2px 7px 9px rgba(255, 255, 0, 0.5);
+    -webkit-transform: skewX(-5deg); 
+    -ms-transform: skewX(-5deg); 
+    border: blue; 
+  transform: skewX(-5deg); 
+  background: -moz-linear-gradient(top,  blue 0%, #78a4ce 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,blue), color-stop(100%,#78a4ce));
+  background: -webkit-linear-gradient(top,  blue 0%,#78a4ce 100%);
+  background: -o-linear-gradient(top,  blue 0%,#78a4ce 100%);
+  background: -ms-linear-gradient(top,  blue 0%,#78a4ce 100%);
+  background: linear-gradient(to bottom,  blue 0%,#78a4ce 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='blue', endColorstr='#78a4ce',GradientType=0 );
+
 }
