--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ body{
     background-color: rgb(22,17,13); 
 }
 
+#portfolio-link{
+    margin-left: 400px; 
+}
+
 .jumbotron{
 margin-bottom: 0px;
 background-image: url('lake.jpg');
