--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,182 +1,69 @@
-body{
-    background-color: rgb(22,17,13); 
-}
-
-#portfolio-link{
-    margin-left: 200px; 
-}
-
-.jumbotron{
-margin-bottom: 0px;
-background-image: url('lake.jpg');
-background-position: 20% 100%;
-background-size: cover;
-background-repeat: no-repeat;
-height: 400px;
-overflow: auto; 
-margin: -70px; 
-}
-
-section {
-    position: absolute;
-}
-
-.text {
-
-    overflow: visible;
-    margin: auto; 
-    width: 800px; 
-    text-align: center;
-}
-
-.top:before {
-    padding: -50px; 
-    content:'Crystals Collector';
-    color: rgb(235,235,245);
-    font-weight:bold;
-    display:block;
-    text-transform: uppercase;
-    font-size:50px;
-    margin-top: 30px;
-    line-height:120px;
-    height: 70px;
-    overflow: hidden;
-    margin: 0;
-    padding-left: 60px;
-    width: 100%;
-    text-shadow:1px 1px 0px rgb(185,185,195),2px 2px 0px rgb(185,185,195),3px 3px 0px rgb(185,185,195);
-}
-
-.bottom {
-    position:relative;
-    top:-50px;
-    }
-
 #title {
-        color: rgba(245,245,245,.2);
-        font-weight:bold;
-        text-transform: uppercase;
-        line-height:90px;
-        font-size:50px;
-        height: 70px;
-        overflow: hidden;
-        margin-top: 0px;
-        padding-left: 63px;
-        width: 100%;
-        text-shadow: 5px 0px 20px rgba(255,255,255,.2),-5px 0px 10px rgba(255,255,255,.4);
-		 -webkit-perspective: 80px;
-       -moz-perspective: 80px;
-        perspective: 80px;
-        -webkit-perspective-origin: 50% 100%;
-        -moz-perspective-origin: 50% 100%;
-        perspective-origin: 50% 100%;
-    }
+  text-align: center;
+}
 
-
-
-
-button {
-        background-color: lightblue; 
-    }
-
-.custom-card-header {
-        color: white; 
-        background: blue;  
-        border-radius: 50px;
-        margin: 10px; 
-        width: 400px;
-        background: -moz-linear-gradient(top,  blue 0%, #78a4ce 100%);
-        background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,blue), color-stop(100%,#78a4ce));
-        background: -webkit-linear-gradient(top,  blue 0%,#78a4ce 100%);
-        background: -o-linear-gradient(top,  blue 0%,#78a4ce 100%);
-        background: -ms-linear-gradient(top,  blue 0%,#78a4ce 100%);
-        background: linear-gradient(to bottom,  blue 0%,#78a4ce 100%);
-        filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='blue', endColorstr='#78a4ce',GradientType=0 );
-         
-        }
-
-    
-
+#target-number {
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  margin-bottom: 2px;
+  margin: auto;
+  border-top: black solid 3px;
+  border-left: black solid 3px;
+  border-right: black solid 3px;
+}
 #random-number {
-    background-color: blue;
-    color: white; 
-    width: 200px;
-    height: 120px;
-    margin: 20px;
-    font-size: 40px;
-    padding: 30px; 
-    border-radius: 50%;
-   
+  font-size: 40px;
 }
 
-aside {
-    background-color: blue;
-    color: white; 
-    height: 100px;
-    width: 200px;
-    position: static;
-    margin-left: 240px;
-    margin-top: -140px;
-    padding-top: 20px;
-    padding-left: 10px;
-    text-transform: uppercase;
-    
-    
+#your-total {
+  border: black solid 3px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  margin: auto;
+  border: black solid 3px;
+  margin-bottom: 30px;
 }
-#pictures{
-    
-
-    margin: 20px;
-    width: 480px;
-
-}
-img {
-  
-    padding: 20px;
-    height: 100px;
-    width: 100px;
-}
-
-#youtotal {
-    background-color: blue;
-    color: white;
-    width: 230px;
-    position: relative;
-    height: 100px;
-    text-transform: uppercase;
-    margin-left: 100px; 
-    
-
-    
-
-}
-
 #score {
-    background-color: blue;
-    color: white;
-    height: 75px;
-    width: 100px;
-    font-size: 36px;
-    border-radius: 50%;
-    float: right; 
-   
-    
+  font-size: 40px;
 }
 
-.gradiant {
-    border:4px solid blue;
-    text-shadow: -1px -1px 2px rgba(0,0,0,0.6);
-    box-shadow: -2px 7px 9px rgba(255, 255, 0, 0.5);
-    -webkit-transform: skewX(-5deg); 
-    -ms-transform: skewX(-5deg); 
-    border: blue; 
-  transform: skewX(-5deg); 
-  background: -moz-linear-gradient(top,  blue 0%, #78a4ce 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,blue), color-stop(100%,#78a4ce));
-  background: -webkit-linear-gradient(top,  blue 0%,#78a4ce 100%);
-  background: -o-linear-gradient(top,  blue 0%,#78a4ce 100%);
-  background: -ms-linear-gradient(top,  blue 0%,#78a4ce 100%);
-  background: linear-gradient(to bottom,  blue 0%,#78a4ce 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='blue', endColorstr='#78a4ce',GradientType=0 );
+#win-title {
+  border-top: black solid 3px;
+  border-left: black solid 3px;
+  border-right: black solid 3px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
 
+  margin: auto;
+}
+
+#wins {
+  font-size: 40px;
+}
+
+#lose-title {
+  border: black solid 3px;
+  width: 100px;
+  height: 100px;
+  text-align: center;
+  margin: auto;
+}
+
+#losses {
+  font-size: 40px;
+}
+
+img {
+  padding: 20px;
+  height: 100px;
+  width: 100px;
+  margin: auto;
+}
+#pictures {
+  margin: auto;
+  width: 212px;
+  margin-bottom: 30px;
 }
