--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+body {
+  background: url("background.jpg") no-repeat center center fixed;
+  background-size: 100%;
+}
+
 #title {
   text-align: center;
 }
